[ refactor ] toList 적용